Enhance SEO and update profile links
Added detailed meta tags for SEO and social sharing in index.html. Introduced robots.txt and sitemap.xml for better search engine indexing. Updated GeeksforGeeks profile link in Profile.jsx.

--- a/index.html
+++ b/index.html
@@ -1,10 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Shaurya's Portfolio</title>
+   <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <title>Shaurya Upadhyay | Java Developer & Backend Engineer</title>
+  <meta name="title" content="Shaurya Upadhyay | Java Developer & Backend Engineer" />
+  <meta name="description" content="Portfolio of Shaurya Upadhyay, a Java Developer specializing in Backend Development, Spring Boot, and Data Structures & Algorithms." />
+  <meta name="keywords" content="Shaurya Upadhyay, Java Developer, Backend Engineer, Spring Boot, React, Data Structures, Algorithms, Portfolio" />
+  <meta name="author" content="Shaurya Upadhyay" />
+  <meta name="robots" content="index, follow" />
+
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://shaurya-upadhyay.me/" />
+  <meta property="og:title" content="Shaurya Upadhyay | Java Developer & Backend Engineer" />
+  <meta property="og:description" content="I build robust backend applications using Java. Explore my projects like Cryptify, PayPact, and AyurHerb." />
+  <meta property="og:image" content="https://i.ibb.co/8LJ9qL10/Whats-App-Image-2025-06-23-at-00-34-04-8a1e77d6.jpg" />
+
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://shaurya-upadhyay.me/" />
+  <meta property="twitter:title" content="Shaurya Upadhyay | Java Developer & Backend Engineer" />
+  <meta property="twitter:description" content="Portfolio of Shaurya Upadhyay. Java Developer specializing in Backend Development." />
+  <meta property="twitter:image" content="https://i.ibb.co/8LJ9qL10/Whats-App-Image-2025-06-23-at-00-34-04-8a1e77d6.jpg" />
+  <meta name="twitter:creator" content="@shaurya01836" />
     <link
       rel="icon"
       type="image/jpeg"
